--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
     <title>Expense Tracker</title>
   </head>
   <body>
+    <header>
+      <!--
+        This is where the header will go.
+      -->
+    </header>
+    <section>
+      <!--
+        This is where the expenses table will display.
+      -->
+    </section>
     <div id="root"></div>
   </body>
 </html>
